# nv-encdec

./: .gitignore  Cargo.toml  build.rs
cpp/: .gitignore  CMakeLists.txt
cpp/include/: DecHeader.h  EncHeader.h  NvDecoder.h  NvEncoder.h
cpp/src/: AppDec.cpp  NvDecoder.cpp  NvEncoder.cpp  NvEncoderCuda.cpp  main.cpp
src/: main.rs  nvencdec.rs
